Closed Bug 824956 Opened 12 years ago Closed 12 years ago

OfferToReceiveAudio/OfferToReceiveVideo constraints not handled correctly

Categories

(Core :: WebRTC: Signaling, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla20

People

(Reporter: abr, Assigned: abr)

Details

(Whiteboard: [WebRTC], [blocking-webrtc+] [qa-])

Attachments

(1 file)

Consequent to Bug 818714, the handling of OfferToReceiveAudio and OfferToReceiveVideo constraints is incorrect. For example, if OfferToReceiveAudio is set to true but no audio user media is added, then no audio m= section is present in the SDP.
OS: Mac OS X → All
Hardware: x86 → All
Whiteboard: [WebRTC]
Assignee: nobody → adam
Priority: -- → P2
Whiteboard: [WebRTC] → [WebRTC], [blocking-webrtc+]
Attachment #696414 - Flags: review?(rjesup)
Status: NEW → ASSIGNED
Attachment #696414 - Flags: review?(rjesup) → review+
Attachment #696414 - Flags: checkin?(rjesup)
Attachment #696414 - Flags: checkin?(rjesup) → checkin+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [WebRTC], [blocking-webrtc+] → [WebRTC], [blocking-webrtc+] [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: