Bug 824956: Activate media type when set to receive media by constraint r=jesup